--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 minio==7.1.16
 PyYAML==6.0.1
 deltalake==0.10.2
-numpy==1.26.0
+numpy==1.24.0
 pandas==2.1.0
 delta-spark==3.1.0
 fastparquet==2024.5.0
-pyarrow==12.0.1
+pyarrow==12.0.0
 requests==2.31.0
-requests-cache==0.9.9
-retry_requests==0.12.0
+requests-cache==1.0.1
+retry-requests==2.0.0
